<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminDefaultActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/course_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/course_name"
            android:layout_marginTop="20dp"
            android:textColor="#000"
            android:textSize="18sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/code_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/course_id"
            android:layout_margin="4dp"
            android:hint="@string/hint_attendance_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/code_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/code_text_input"
            android:layout_margin="4dp"
            android:hint="@string/time_limit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/action_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:text="@string/ok"
            android:textColor="#0277BD"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/action_view_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/view_stats"
            android:textColor="#0277BD"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:text="@string/cancel"
            android:textColor="#0277BD"
            android:textSize="18sp" />

    </RelativeLayout>


</RelativeLayout>